--- a/extension/package.json
+++ b/extension/package.json
@@ -1,17 +1,19 @@
 {
   "name": "trumpy",
   "displayName": "Trumpy",
-  "version": "0.0.0",
-  "description": "A basic Plasmo extension.",
+  "version": "1.0.0",
+  "description": "Make news great again.",
   "author": "yyjlincoln",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build"
   },
   "dependencies": {
+    "framer-motion": "^6.5.1",
     "plasmo": "0.48.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@plasmohq/prettier-plugin-sort-imports": "1.1.1",
@@ -19,8 +21,18 @@
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
+    "crypto-browserify": "^3.12.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.14",
     "prettier": "2.7.1",
-    "typescript": "4.7.4"
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "tailwindcss": "^3.1.6",
+    "typescript": "4.7.4",
+    "url": "^0.11.0",
+    "util": "^0.12.4"
   },
   "manifest": {
     "host_permissions": [
