--- a/extension/package.json
+++ b/extension/package.json
@@ -13,6 +13,7 @@
     "plasmo": "0.48.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "6",
     "react-vis": "^1.11.7"
   },
