--- a/extension/package.json
+++ b/extension/package.json
@@ -9,6 +9,7 @@
     "build": "plasmo build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "plasmo": "0.48.0",
     "react": "18.2.0",
